--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -9,6 +9,10 @@ command = /usr/sbin/sshd -D
 priority = 2
 command = bash -c "/etc/init.d/influxdb start && sleep 5"
 
+[program:chronograf]
+priority = 2
+command = bash -c "/etc/init.d/chronograf start"
+
 [program:grafana]
 priority = 3
 command = /etc/init.d/grafana-server start
