Fixing chronograf path

--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -11,7 +11,7 @@ command = bash -c "/etc/init.d/influxdb start && sleep 5"
 
 [program:chronograf]
 priority = 2
-command = bash -c "/etc/init.d/chronograf start"
+command = bash -c "/usr/bin/chronograf start"
 
 [program:grafana]
 priority = 3
