--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -7,7 +7,7 @@ command = bash -c "/etc/init.d/influxdb start && sleep 5"
 
 [program:chronograf]
 priority = 2
-command = bash -c "/usr/bin/chronograf start"
+command = bash -c "/usr/bin/chronograf start --port=8083"
 
 [program:grafana]
 priority = 3
