don't daemonize, let supervisor control

--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -2,8 +2,8 @@
 nodaemon = true
 
 [program:influxdb]
-priority = 2
-command = bash -c "/etc/init.d/influxdb start && sleep 5"
+priority = 1
+command = /usr/bin/influxd -pidfile /var/run/influxdb/influxd.pid -config /etc/influxdb/influxdb.conf
 
 [program:chronograf]
 priority = 2
@@ -11,4 +11,5 @@ command = bash -c "/usr/bin/chronograf start --port=8083"
 
 [program:grafana]
 priority = 3
-command = /etc/init.d/grafana-server start
+command = /usr/sbin/grafana-server --homepath=/usr/share/grafana --pidfile=/var/run/grafana-server.pid --config=/etc/grafana/grafana.ini --packaging=deb cfg:default.paths.provisioning=/etc/grafana/provisioning cfg:default.paths.data=/var/lib/grafana cfg:default.paths.logs=/var/log/grafana cfg:default.paths.plugins=/var/lib/grafana/plugins cfg:default.paths.logs=/var/log/grafana
+
