--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: [https://buymeacoff.ee/philhawthorne, https://paypal.me/philhawthorne]
+custom: ["https://buymeacoff.ee/philhawthorne", "https://paypal.me/philhawthorne"]
