--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -133,6 +133,9 @@ admin_password = root
 ;cookie_username = grafana_user
 ;cookie_remember_name = grafana_remember
 
+# Enable iFrame embedding
+allow_embedding = true
+
 # disable gravatar profile images
 ;disable_gravatar = false
 
