Set Cookie SameSite flag to none
When embedding Grafana in an iFrame (like Home Assistant) the samesite
flag must be set to None so that users can login to Grafana

Fixes #41

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -136,6 +136,9 @@ admin_password = root
 # Enable iFrame embedding
 allow_embedding = true
 
+# Set cookie SameSite to None so that embedding is supported
+cookie_samesite = none
+
 # disable gravatar profile images
 ;disable_gravatar = false
 
